essais données modèle

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "Ce notebook contient les codes nécessaire à la mise en place du modèle. Le modèle est inspiré de celui de Iacoviello et Navarro : \n",
     "\n",
-    "- La première étape consiste à identifier les chocs de politique monétaire, en prenant le réside de la régression du taux d'intérêt sur l'écart d'inflation par rapport à la cible et l'output gap ou le chômage. En réalité Iacoviello et Navarro utilisent des lags et valeurs présentes de l'inflation, des spreads de crédit, du PIB et des lags des taux des fonds fédéraux.\n",
+    "- La première étape consiste à identifier les chocs de politique monétaire, en prenant le résidu de la régression du taux d'intérêt sur l'écart d'inflation par rapport à la cible et l'output gap ou le chômage. En réalité Iacoviello et Navarro utilisent des lags et valeurs présentes de l'inflation, des spreads de crédit, du PIB et des lags des taux des fonds fédéraux.\n",
     "Il nous manque donc l'output gap, l'inflation et le chômage de la zone euro\n",
     "- La deuxième étape consiste à estimer l'impact de ces chocs sur l'activité économique (PIB, emploi ...) en régressant ces variables sur les chocs et des variables de contrôles (4 lags du PIB et des trends linéaires et quadratiques)\n",
     "\n"
@@ -64,8 +64,15 @@
     "Il faut construire les variables suivantes : \n",
     "- log_euroarea_gdp, \n",
     "- corporate spreads, \n",
-    "- lagged_federal_funds (<span style=\"color:red\"> je pense qu'il faut faire une variable par lag, ils prennent 4 lags dans le papier</span>),\n",
+    "- lagged_federal_funds (<span style=\"color:red\"> Iacoviello et Navarro utilisent le shadow rate, je pense qu'il faut faire une variable par lag, ils prennent 4 lags dans le papier</span>),\n",
     "- log_foreign_gdp (<span style=\"color:red\"> le problème c'est qu'on n'a pas de pays étrangers dans notre base donc on ne peut pas vraiment créer cette variable</span> )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour l'instant pour le federal funds rate j'ai pris le key interest rate qui est sur le site de l'OCDE"
    ]
   },
   {
