Ajout de potential growth à data

--- a/data.ipynb
+++ b/data.ipynb
@@ -38,6 +38,7 @@
     "    * [Données d'heures de travail](#partie22)\n",
     "    * [Données des taux d'intérêts](#partie23)\n",
     "    * [Données d'indice à la consommation des prix](#partie24)\n",
+    "    * [Données de croissance potentielle](#partie25)\n",
     "* [Création de la base de données](#partie3)\n"
    ]
   },
@@ -50,30 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.1)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Liste comportant les pays choisis\n",
+    "# Liste comportant les pays choisis\n",
     "countries_selected=[\n",
-    "    \"Austria\", \"Belgium\", \"Bulgaria\", \"Czechia\", \"Denmark\", \"Estonia\", \n",
+    "    \"Austria\", \"Belgium\", \"Bulgaria\", \"Czechia\", \"Czech Republic\", \"Denmark\", \"Estonia\", \n",
     "    \"Finland\", \"France\", \"Germany\", \"Greece\", \"Hungary\", \"Iceland\", \n",
     "    \"Ireland\", \"Italy\", \"Latvia\", \"Lithuania\", \"Luxembourg\", \"Netherlands\", \n",
     "    \"Norway\", \"Poland\", \"Portugal\", \"Romania\", \"Slovakia\", \"Slovak Republic\",\n",
@@ -122,22 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Charge les données depuis le csv \n",
+    "# Chargement des données \n",
     "df_GDP = pd.read_csv(\"Données_extraites/GDP_trimestriel_eurostat.csv\", encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "# Sélection des colonnes nécessaires avec les pays sélectionnés\n",
     "df_GDP_selected = df_GDP[df_GDP['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
-    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "# Modification du format pour avoir les périodes en index et les noms des pays en nom de colonnes\n",
     "df_GDP = df_GDP_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
     "\n",
-    "# Transforme le nom des colonnes en PIB_Nom_du_pays\n",
+    "# Transformation des colonnes en PIB_Nom_du_pays\n",
     "df_GDP.columns = [f'PIB_{col}' for col in df_GDP.columns]\n",
-    "df_GDP.columns = [col.replace(\" \", \"_\") for col in df_GDP.columns]"
+    "df_GDP.columns = [col.replace(\" \", \"_\") for col in df_GDP.columns]\n",
+    "\n"
    ]
   },
   {
@@ -160,20 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Charge les données de 1995 à 1997 \n",
+    "# Chargement des données de 1995 à 1997 \n",
     "df_working_hours_95_97 = pd.read_csv(\"Données_extraites/Working_hours_eurostat_1995-1997.csv\", encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "# Sélection des colonnes nécessaires avec les pays sélectionnés\n",
     "df_working_hours_95_97_selected = df_working_hours_95_97[df_working_hours_95_97['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
-    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "# Modification du format pour avoir les périodes en index et les noms des pays en nom de colonnes\n",
     "df_working_hours_95_97_pivot = df_working_hours_95_97_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
     "\n",
-    "# Transforme le nom des colonnes en WH_Nom_du_pays\n",
+    "# Transformation des colonnes en WH_Nom_du_pays\n",
     "df_working_hours_95_97_pivot.columns = [f'WH_{col}' for col in df_working_hours_95_97_pivot.columns]\n",
     "df_working_hours_95_97_pivot.columns = [col.replace(\" \", \"_\") for col in df_working_hours_95_97_pivot.columns]\n",
     "\n",
@@ -201,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,15 +197,15 @@
     "Q1_1998 =  df_working_hours_98_07_pivot.loc[['1998-Q1']]\n",
     "df_working_hours_98_07_pivot = df_working_hours_98_07_pivot.drop(index='1998-Q1', errors='ignore')\n",
     "\n",
-    "# On ajoute les trimestres vierges aux données de 1995 à 1998 pour ensuite les compléter par interpolation\n",
+    "# Ajout des trimestres vierges aux données de 1995 à 1998 pour ensuite les compléter par interpolation\n",
     "new_index = []\n",
     "values = []\n",
     "for year in df_working_hours_95_97_pivot.index:\n",
-    "    # Ajouter Q1 pour chaque année (avec la valeur annuelle)\n",
+    "    # Ajout du Q1 pour chaque année (avec la valeur annuelle)\n",
     "    new_index.append(f\"{year}-Q1\")\n",
     "    values.append(df_working_hours_95_97_pivot.loc[year].values)\n",
     "    \n",
-    "    # Ajouter Q2, Q3 et Q4 (lignes vides pour l'instant)\n",
+    "    # Ajouts des Q2, Q3 et Q4 (lignes vides pour l'instant)\n",
     "    for quarter in ['Q2', 'Q3', 'Q4']:\n",
     "        new_index.append(f\"{year}-{quarter}\")\n",
     "        values.append([None] * len(df_working_hours_95_97_pivot.columns))\n",
@@ -233,13 +221,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,11 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Suppresion des index\n",
     "df_working_hours_98_07_pivot = df_working_hours_98_07_pivot.drop(index = ['2008-Q1','2008-Q2', '2008-Q3','2008-Q4'] , errors='ignore')\n",
+    "\n",
     "# Concaténation\n",
     "df_working_hours = pd.concat(\n",
     "    [df_working_hours_95_97_pivot, df_working_hours_98_07_pivot, df_working_hours_08_24_pivot], \n",
@@ -278,20 +261,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Charger les données\n",
+    "# Chargement des données\n",
     "df_LT_IR = pd.read_csv('Données_extraites/Long_term_IR_OCDE.csv', encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "# Sélection des colonnes nécessaires avec les pays sélectionnés\n",
     "df_LT_IR_selected = df_LT_IR[df_LT_IR['Reference area'].isin(countries_selected)][['Reference area', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
-    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "# Modification du format pour avoir les périodes en index et les noms des pays en nom de colonnes\n",
     "df_LT_IR = df_LT_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
     "\n",
-    "# Renommer les colonnes pour inclure le préfixe LT_IR_ (=Long Term Interest Rate)\n",
+    "# Modification des colonnes pour inclure le préfixe LT_IR_ (=Long Term Interest Rate)\n",
     "df_LT_IR.columns = [f'LT_IR_{col}' for col in df_LT_IR.columns]\n",
     "df_LT_IR.columns = [col.replace(\" \", \"_\") for col in df_LT_IR.columns]\n",
     "df_LT_IR = df_LT_IR.rename(columns={'LT_IR_Slovak_Republic': 'LT_IR_Slovakia'})\n",
@@ -302,7 +285,8 @@
     "df_ST_IR = df_ST_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
     "df_ST_IR.columns = [f'ST_IR_{col}' for col in df_ST_IR.columns]\n",
     "df_ST_IR.columns = [col.replace(\" \", \"_\") for col in df_ST_IR.columns]\n",
-    "df_ST_IR = df_ST_IR.rename(columns={'ST_IR_Slovak_Republic': 'ST_IR_Slovakia'})"
+    "df_ST_IR = df_ST_IR.rename(columns={'ST_IR_Slovak_Republic': 'ST_IR_Slovakia'})\n",
+    "print(df_ST_IR)"
    ]
   },
   {
@@ -321,20 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Charger les données\n",
+    "# Chargement des données\n",
     "df_CPI=pd.read_csv('Données_extraites/CPI_annual_eurostat_1996-2024.csv', encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "# Sélection des colonnes nécessaires avec les pays sélectionnés\n",
     "df_CPI_selected = df_CPI[df_CPI['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
-    "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
+    "# Modification du format pour avoir les périodes en index et les noms des pays en nom de colonnes\n",
     "df_CPI = df_CPI_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
     "\n",
-    "# Transforme le nom des colonnes en CPI_Nom_du_pays\n",
+    "# Transformation des colonnes en CPI_Nom_du_pays\n",
     "df_CPI.columns = [f'CPI_{col}' for col in df_CPI.columns]\n",
     "df_CPI.columns = [col.replace(\" \", \"_\") for col in df_CPI.columns]"
    ]
@@ -348,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,8 +342,51 @@
     "# Pour chaque trimestre on a donc 3 valeurs on fait donc la moyenne\n",
     "df_CPI = df_CPI.groupby(df_CPI.index).mean()\n",
     "\n",
-    "# On modifie le format de l'index qui est YYYYQQ en YYYY-QQ pour l'accorder aux autres tables\n",
-    "df_CPI.index = df_CPI.index.astype(str).str.replace(r'(\\d{4})Q(\\d)', r'\\1-Q\\2', regex=True)"
+    "# Modification du format de l'index qui est YYYYQQ en YYYY-QQ pour l'accorder aux autres tables\n",
+    "df_CPI.index = df_CPI.index.astype(str).str.replace(r'(\\d{4})Q(\\d)', r'\\1-Q\\2', regex=True)\n",
+    "df_CPI.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Données de croissance potentielle <a class=\"anchor\" id=\"partie25\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous récupérons les données relatives à l'étude de la croissance potentielle sur un dataframe de la banque mondiale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Chargement des données \n",
+    "df_potential_growth= pd.read_excel(\"Données_extraites/potential_growth_database.xlsx\",sheet_name=\"PotentialGrowthMeasures\")\n",
+    "\n",
+    "# Modification des colonnes (pour garder une homogénéité entre les différents df)\n",
+    "df_potential_growth= df_potential_growth.rename(columns={'Country':'geo', 'Year':'TIME_PERIOD','HP: Potential real GDP growth (percent)':'OBS_VALUE'})\n",
+    "df_potential_growth = df_potential_growth[df_potential_growth['TIME_PERIOD'] >= 1995]\n",
+    "\n",
+    "# Choix des colonnes nécessaires avec les pays sélectionnés. \n",
+    "df_potential_growth_selected = df_potential_growth[df_potential_growth['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "\n",
+    "# Modification du format pour avoir les périodes en index et les noms des pays en nom de colonnes\n",
+    "df_potential_growth= df_potential_growth_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
+    "\n",
+    "# Transformation des colonnes en P_Growth_pays\n",
+    "df_potential_growth = df_potential_growth.rename(columns={'Czech Republic': 'Czechia'})\n",
+    "df_potential_growth = df_potential_growth.rename(columns={'Slovak Republic': 'Slovakia'})\n",
+    "df_potential_growth.columns = [f'P_Growth_{col}' for col in df_potential_growth.columns]\n",
+    "df_potential_growth.columns = [col.replace(\" \", \"_\") for col in df_potential_growth.columns]\n",
+    "\n",
+    "df_potential_growth.columns\n"
    ]
   },
   {
@@ -378,57 +405,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Concaténation des DataFrames\n",
-    "df_concat = pd.concat([df_GDP, df_CPI,df_LT_IR, df_ST_IR, df_working_hours], axis=1)\n",
+    "df_concat = pd.concat([df_GDP, df_CPI,df_LT_IR, df_ST_IR, df_working_hours, df_potential_growth], axis=1)\n",
     "\n",
-    "#  Réorganiser les colonnes pour que celles de chaque pays soient côte à côte\n",
+    "# Réorganisation des colonnes pour que celles de chaque pays soient côte à côte\n",
     "ordered_columns = []\n",
     "\n",
-    "# On modifie la liste de base pour qu'elle corresponde au format de notre dataframe\n",
+    "# Modification la liste de base pour qu'elle corresponde au format de notre dataframe\n",
     "countries_selected.remove('Slovak Republic')\n",
     "countries_selected.remove('United Kingdom')\n",
+    "countries_selected.remove('Czech Republic')\n",
     "countries_selected.append('United_Kingdom')\n",
     "\n",
-    "# On trie\n",
+    "# Tri\n",
     "for country in countries_selected:\n",
     "    ordered_columns.append(f'CPI_{country}')\n",
     "    ordered_columns.append(f'PIB_{country}')\n",
     "    ordered_columns.append(f'LT_IR_{country}')\n",
     "    ordered_columns.append(f'ST_IR_{country}')\n",
     "    ordered_columns.append(f'WH_{country}')\n",
+    "    ordered_columns.append(f'P_Growth_{country}')\n",
     "\n",
     "df_final = df_concat[ordered_columns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting openpyxl\n",
-      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
-      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
-      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Exporter les données\n",
-    "%pip install openpyxl\n",
-    "df_final.to_excel('base_de_données_v1.xlsx', index=True, engine='openpyxl')\n"
    ]
   }
  ],
@@ -448,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
