ajout d'un commentaire

--- a/data.ipynb
+++ b/data.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nous récupérons les données relatives à l'étude de la croissance potentielle sur un dataframe de la banque mondiale."
+    "Nous récupérons les données relatives à l'étude de la croissance potentielle sur un dataframe de la banque mondiale. Il nous faut faire attenion aux noms donnés à la Tchéquie et la Slovaquie qui sont Czech Republic et Slovak Republic et non Czechia et Slovakia comme nous le nommons dans notre nomenclature."
    ]
   },
   {
