J'ai ajouté de la visualisation et fait du rangement

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -4,7 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CE NOTEBOOK CONTIENDRA LES CODES DE VISUALISATION, J'ATTENDS DE FINIR LE FORMATAGE DES DONNÉES POUR LES TRANSFORMER EN CSV ET LES IMPORTER ICI "
+    "# **Visualisation et statistiques descriptives**\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction<a class=\"anchor\" id=\"partie1\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ce notebook contient les codes nécessaires à la visualisation et les statistiques descriptives de notre base de données."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sommaire\n",
+    "\n",
+    "* [Introduction](#partie1)\n",
+    "* [Statistiques descriptives](#partie2)\n",
+    "* [Visualisation](#partie3)\n",
+    "    * [Données de PIB](#partie31)\n",
+    "    * [Données d'heures de travail](#partie32)\n"
    ]
   },
   {
@@ -25,14 +53,105 @@
     "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as ticker"
+    "import matplotlib.ticker as ticker\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importation des données\n",
+    "df = pd.read_excel(\"Données_produites/base_de_données_v1.xlsx\")\n",
+    "\n",
+    "# Transformation des index en date pour pouvoir les utiliser dans les plot\n",
+    "df = df.set_index('TIME_PERIOD')\n",
+    "df.index = pd.PeriodIndex(df.index, freq='Q')\n",
+    "df.index = df.index.to_timestamp()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Évolution des Heures travaillées en France"
+    "## Statistiques descriptives <a class=\"anchor\" id=\"partie2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans une volonté de rendre compte des valeurs manquantes à notre dataframe nous créons un dataframe qui comprend l'ensemble des valeurs manquantes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nan = df.isna()\n",
+    "df_nan = pd.DataFrame({\n",
+    "    \"TIME_PERIOD_WITH_NAN\": df_nan.apply(lambda col: list(df.index[col]), axis = 0)\n",
+    "})\n",
+    "df_nan.to_csv(\"df_nan.csv\", index=True, encoding=\"utf-8\")\n",
+    "print(df_nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_missing_binary = df.isnull().astype(int)\n",
+    "df_missing_binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir la figure avec un affichage interactif\n",
+    "fig, ax = plt.subplots(figsize=(20, 40))\n",
+    "\n",
+    "# Utiliser seaborn pour une meilleure visualisation sans grille\n",
+    "sns.heatmap(df_missing_binary, cmap=\"OrRd\", cbar=False, linewidths=0, ax=ax, square=False)\n",
+    "\n",
+    "# Ajouter un titre\n",
+    "ax.set_title(\"Matrice des valeurs manquantes (Vert = Présent, Rouge = Manquant)\")\n",
+    "\n",
+    "# Rotation des labels pour une meilleure lisibilité\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.yticks(rotation=0)\n",
+    "\n",
+    "# Afficher la figure\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualisation <a class=\"anchor\" id=\"partie3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Données de PIB <a class=\"anchor\" id=\"partie31\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour notre rendu de mi-parcours nous avons présenté les évolutions des PIB en France et dans les principaux pays d'Europe. Nous faisons d'abord celui de la France."
    ]
   },
   {
@@ -43,36 +162,7 @@
    "source": [
     "plt.figure(figsize=(14, 6))  # Taille du graphique\n",
     "\n",
-    "plt.plot(df_working_hours.index, df_working_hours['WH_France'], marker='o', linestyle='-')\n",
-    "\n",
-    "plt.xlabel(\"Période\")\n",
-    "plt.ylabel(\"Heures travaillées en France\")\n",
-    "plt.title(\"Évolution des heures travaillées en France (1995-2024)\")\n",
-    "\n",
-    "# Sélectionner un sous-ensemble des labels de l'axe X pour éviter la surcharge\n",
-    "num_ticks = 10  # Nombre de labels affichés sur l'axe X\n",
-    "indices = np.linspace(0, len(df_working_hours.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
-    "plt.xticks(df_working_hours.index[indices], rotation=45)  # Appliquer les labels espacés\n",
-    "plt.grid(True)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Évolution du PIB en France\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(14, 6))  # Taille du graphique\n",
-    "\n",
-    "plt.plot(df_GDP_pivot.index, df_GDP_pivot['WH_France'], marker='o', linestyle='-')\n",
+    "plt.plot(df.index, df['PIB_France'], marker='o', linestyle='-')\n",
     "\n",
     "plt.xlabel(\"Période\")\n",
     "plt.ylabel(\"PIB de la France\")\n",
@@ -80,8 +170,8 @@
     "\n",
     "# Sélectionner un sous-ensemble des labels de l'axe X pour éviter la surcharge\n",
     "num_ticks = 8  # Nombre de labels affichés sur l'axe X\n",
-    "indices = np.linspace(0, len(df_GDP_pivot.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
-    "plt.xticks(df_GDP_pivot.index[indices], rotation=45)  # Appliquer les labels espacés\n",
+    "indices = np.linspace(0, len(df.index) - 1, num_ticks, dtype=int)  # Espacement des indices\n",
+    "plt.xticks(df.index[indices], rotation=45)  # Appliquer les labels espacés\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -90,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Évolution des principaux PIB en europe"
+    "Et ensuite pour l'Europe"
    ]
   },
   {
@@ -99,9 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_countries = ['PIB_Germany', 'PIB_France', 'PIB_United_Kingdom','PIB_Spain', 'PIB_Italy', 'PIB_Netherlands', 'PIB_Türkiye', 'PIB_Switzerland']\n",
+    "selected_countries = ['PIB_Germany', 'PIB_France', 'PIB_United_Kingdom','PIB_Spain', 'PIB_Italy', 'PIB_Netherlands', 'PIB_Switzerland']\n",
     "\n",
-    "df_selected = df_GDP_pivot[selected_countries]\n",
+    "df_selected = df[selected_countries]\n",
     "\n",
     "colors = plt.cm.get_cmap(\"tab10\", len(df_selected.columns))  # Utilisation d'une palette de couleurs\n",
     "plt.figure(figsize=(14, 6))\n",
@@ -113,7 +203,13 @@
     "plt.xlabel(\"Période\")\n",
     "plt.ylabel(\"PIB en Millions\")\n",
     "plt.title(\"Principaux PIB trimestriels en Europe \")\n",
-    "plt.xticks(df_selected.index[::17], rotation=45)\n",
+    "\n",
+    "# Indicage\n",
+    "num_ticks = 8 \n",
+    "indices = np.linspace(0, len(df.index) - 1, num_ticks, dtype=int)  \n",
+    "plt.xticks(df.index[indices], rotation=45) \n",
+    "\n",
+    "# Affichage \n",
     "plt.legend(loc=\"upper left\", bbox_to_anchor=(1, 1), ncol=2)  # Légende en dehors du graphique\n",
     "plt.grid(True)\n",
     "plt.gca().yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.0f}\")) #permet de ne pas avoir d'écriture scientifique\n",
@@ -124,7 +220,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Liste des périodes sans valeurs par pays sur le df des heures travaillées"
+    "### Données d'heures travaillées <a class=\"anchor\" id=\"partie32\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Voici l'évolution des heures travaillées en France."
    ]
   },
   {
@@ -133,11 +236,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wh_nan = df_working_hours.isna()\n",
-    "df_wh_nan = pd.DataFrame({\n",
-    "    \"TIME_PERIOD_WITH_NAN\": df_wh_nan.apply(lambda col: list(df_working_hours.index[col]), axis = 0)\n",
-    "})\n",
-    "df_wh_nan.to_csv(\"df_wh_nan.csv\", index=True, encoding=\"utf-8\")"
+    "plt.figure(figsize=(14, 6))  # Taille du graphique\n",
+    "\n",
+    "plt.plot(df.index, df['WH_France'], marker='o', linestyle='-')\n",
+    "\n",
+    "plt.xlabel(\"Période\")\n",
+    "plt.ylabel(\"Heures travaillées en France\")\n",
+    "plt.title(\"Évolution des heures travaillées en France (1995-2024)\")\n",
+    "\n",
+    "# Sélectionner un sous-ensemble des labels de l'axe X pour éviter la surcharge\n",
+    "num_ticks = 10 \n",
+    "indices = np.linspace(0, len(df.index) - 1, num_ticks, dtype=int)\n",
+    "plt.xticks(df.index[indices], rotation=45)\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   }
  ],
@@ -148,8 +260,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
