--- a/modele.ipynb
+++ b/modele.ipynb
@@ -77,6 +77,508 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 1)) (2.2.3)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 2)) (2.2.3)\n",
+      "Requirement already satisfied: openpyxl in /opt/conda/lib/python3.12/site-packages (from -r requirements.txt (line 3)) (3.1.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas->-r requirements.txt (line 1)) (2025.1)\n",
+      "Requirement already satisfied: et-xmlfile in /opt/conda/lib/python3.12/site-packages (from openpyxl->-r requirements.txt (line 3)) (2.0.0)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -r requirements.txt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['STRUCTURE', 'STRUCTURE_ID', 'STRUCTURE_NAME', 'ACTION', 'REF_AREA',\n",
+      "       'Zone de référence', 'MEASURE', 'Mesure', 'FREQ',\n",
+      "       'Fréquence d'observation', 'TIME_PERIOD', 'Période de temps',\n",
+      "       'OBS_VALUE', 'Observation value', 'OBS_STATUS', 'Observation status',\n",
+      "       'UNIT_MEASURE', 'Unité de mesure', 'PRICE_BASE', 'Ajustement',\n",
+      "       'ADJUSTMENT', 'Base de prix', 'UNIT_MULT', 'Multiplicateur d'unité',\n",
+      "       'CURRENCY', 'Monnaie', 'BASE_PER', 'Période de base', 'METHODOLOGY',\n",
+      "       'Méthode', 'DECIMALS', 'Decimals'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6726/3866051748.py:7: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df_key[\"TIME_PERIOD\"] = pd.to_datetime(df_key[\"TIME_PERIOD\"])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TIME_PERIOD</th>\n",
+       "      <th>key_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1999-01-01</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1999-04-01</td>\n",
+       "      <td>1.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1999-07-01</td>\n",
+       "      <td>1.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1999-10-01</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>3.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>104 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TIME_PERIOD  key_rate\n",
+       "6   1999-01-01      2.00\n",
+       "5   1999-04-01      1.50\n",
+       "28  1999-07-01      1.50\n",
+       "27  1999-10-01      2.00\n",
+       "26  2000-01-01      2.50\n",
+       "..         ...       ...\n",
+       "39  2023-10-01      4.00\n",
+       "38  2024-01-01      4.00\n",
+       "37  2024-04-01      4.00\n",
+       "25  2024-07-01      3.75\n",
+       "24  2024-10-01      3.50\n",
+       "\n",
+       "[104 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import et formatage du key interest rate\n",
+    "df_key = pd.read_csv(\"Données_extraites/key interest rates.csv\", encoding='utf-8')\n",
+    "df_key\n",
+    "print(df_key.columns)\n",
+    "df_key = df_key[['TIME_PERIOD', 'OBS_VALUE']]\n",
+    "df_key = df_key.rename(columns={'OBS_VALUE':'key_rate'})\n",
+    "df_key[\"TIME_PERIOD\"] = pd.to_datetime(df_key[\"TIME_PERIOD\"])\n",
+    "df_key = df_key.sort_values(by=\"TIME_PERIOD\")\n",
+    "df_key\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TIME_PERIOD</th>\n",
+       "      <th>key_rate</th>\n",
+       "      <th>key_rate_lag1</th>\n",
+       "      <th>key_rate_lag2</th>\n",
+       "      <th>key_rate_lag3</th>\n",
+       "      <th>key_rate_lag4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1999-01-01</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1999-04-01</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1999-07-01</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1999-10-01</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2023-10-01</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2024-04-01</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2024-07-01</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>104 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TIME_PERIOD  key_rate  key_rate_lag1  key_rate_lag2  key_rate_lag3  \\\n",
+       "6   1999-01-01      2.00            NaN            NaN            NaN   \n",
+       "5   1999-04-01      1.50           2.00            NaN            NaN   \n",
+       "28  1999-07-01      1.50           1.50            2.0            NaN   \n",
+       "27  1999-10-01      2.00           1.50            1.5            2.0   \n",
+       "26  2000-01-01      2.50           2.00            1.5            1.5   \n",
+       "..         ...       ...            ...            ...            ...   \n",
+       "39  2023-10-01      4.00           4.00            3.5            3.0   \n",
+       "38  2024-01-01      4.00           4.00            4.0            3.5   \n",
+       "37  2024-04-01      4.00           4.00            4.0            4.0   \n",
+       "25  2024-07-01      3.75           4.00            4.0            4.0   \n",
+       "24  2024-10-01      3.50           3.75            4.0            4.0   \n",
+       "\n",
+       "    key_rate_lag4  \n",
+       "6             NaN  \n",
+       "5             NaN  \n",
+       "28            NaN  \n",
+       "27            NaN  \n",
+       "26            2.0  \n",
+       "..            ...  \n",
+       "39            2.0  \n",
+       "38            3.0  \n",
+       "37            3.5  \n",
+       "25            4.0  \n",
+       "24            4.0  \n",
+       "\n",
+       "[104 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# création des lags \n",
+    "df_key[\"key_rate_lag1\"] = df_key[\"key_rate\"].shift(1)\n",
+    "df_key[\"key_rate_lag2\"] = df_key[\"key_rate\"].shift(2)\n",
+    "df_key[\"key_rate_lag3\"] = df_key[\"key_rate\"].shift(3)\n",
+    "df_key[\"key_rate_lag4\"] = df_key[\"key_rate\"].shift(4)\n",
+    "df_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import et formatage du GDP\n",
+    "\n",
+    "df_euro_gdp = pd.read_csv(\"Données_extraites/estat_namq_10_gdp_filtered_en (1).csv.gz\", compression=\"gzip\")\n",
+    "df_euro_gdp=df_euro_gdp[['TIME_PERIOD', 'OBS_VALUE']]\n",
+    "df_euro_gdp=df_euro_gdp.rename(columns={'OBS_VALUE':'gdp'})\n",
+    "df_euro_gdp[\"log_gdp\"] = np.log(df_euro_gdp[\"gdp\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TIME_PERIOD</th>\n",
+       "      <th>gdp</th>\n",
+       "      <th>log_gdp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1995-Q1</td>\n",
+       "      <td>1340877.4</td>\n",
+       "      <td>14.108835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1995-Q2</td>\n",
+       "      <td>1385087.6</td>\n",
+       "      <td>14.141274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995-Q3</td>\n",
+       "      <td>1388312.6</td>\n",
+       "      <td>14.143600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1995-Q4</td>\n",
+       "      <td>1472070.7</td>\n",
+       "      <td>14.202181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1996-Q1</td>\n",
+       "      <td>1400071.7</td>\n",
+       "      <td>14.152034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>2023-Q4</td>\n",
+       "      <td>3804526.0</td>\n",
+       "      <td>15.151702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>2024-Q1</td>\n",
+       "      <td>3662523.2</td>\n",
+       "      <td>15.113663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>2024-Q2</td>\n",
+       "      <td>3759149.1</td>\n",
+       "      <td>15.139703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>2024-Q3</td>\n",
+       "      <td>3781949.7</td>\n",
+       "      <td>15.145750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>2024-Q4</td>\n",
+       "      <td>3949142.4</td>\n",
+       "      <td>15.189009</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    TIME_PERIOD        gdp    log_gdp\n",
+       "0       1995-Q1  1340877.4  14.108835\n",
+       "1       1995-Q2  1385087.6  14.141274\n",
+       "2       1995-Q3  1388312.6  14.143600\n",
+       "3       1995-Q4  1472070.7  14.202181\n",
+       "4       1996-Q1  1400071.7  14.152034\n",
+       "..          ...        ...        ...\n",
+       "115     2023-Q4  3804526.0  15.151702\n",
+       "116     2024-Q1  3662523.2  15.113663\n",
+       "117     2024-Q2  3759149.1  15.139703\n",
+       "118     2024-Q3  3781949.7  15.145750\n",
+       "119     2024-Q4  3949142.4  15.189009\n",
+       "\n",
+       "[120 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_euro_gdp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -706,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
