essai de correction du problème dans data

--- a/modele.ipynb
+++ b/modele.ipynb
@@ -1331,6 +1331,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# il faut d'abord merger le df avec les chocs et le df avec toutes les données "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def local_projection_irf(data, response_var, shock_var, control_vars, max_horizon=12):\n",
     "    \"\"\"Estime les réponses impulsionnelles (IRF) par projections locales.\"\"\"\n",
     "    \n",
